Исправлен запуск приложения

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,9 @@ services:
     env_file:
       - .env
       - .secrets
-    command: bash -c "
-      alembic upgrade head && uvicorn the_app.main:app
-      --host 0.0.0.0 --port 8080
-      --lifespan=on --use-colors --loop uvloop --http httptools
-      --reload --log-level debug
-      "
     volumes:
-      - .:/code
+      - .:/opt/app
+      - package_data:/venv
     ports:
       - 8080:8080
     depends_on:
@@ -43,3 +38,4 @@ services:
 
 volumes:
   postgres_data:
+  package_data:
