--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -128,3 +130,5 @@ dmypy.json
 # Pyre type checker
 .pyre/
 /requirements-dev.txt
+
+
