--- a/alembic.ini
+++ b/alembic.ini
@@ -5,7 +5,7 @@
 script_location = alembic
 
 # template used to generate migration files
-# file_template = %%(rev)s_%%(slug)s
+file_template = %%(slug)s_%%(rev)s
 
 # timezone to use when rendering the date
 # within the migration file as well as the filename.
