Убрано лишнее из деплоя

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,10 @@ services:
       - .secrets
     ports:
       - 5432:5432
-    environment:
-      - POSTGRES_USER=${SQL_USER}
     healthcheck:
       test:
         [
-            "CMD-SHELL", "pg_isready -d $SQL_DB -U $SQL_USER"
+            "CMD-SHELL", "pg_isready -d $POSTGRES_DB -U $POSTGRES_USER"
         ]
       interval: 5s
       timeout: 5s
