Генерация exchanges/queues + базовый класс воркера для обработки сообщений

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db/dumps:/home/root/dumps
     env_file:
       - .env
       - .secrets
