--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+--index-url https://pypi.fury.io/zerthmonk/
+--extra-index-url https://pypi.org/simple/
+
 alembic==1.7.7
 amqp==5.1.1
 anyio==3.6.1
@@ -71,6 +74,7 @@ safety==2.0b1
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.36
+skabenproto==2.0.0
 stack-data==0.2.0
 starlette==0.19.1
 tokenize-rt==4.2.1
@@ -78,6 +82,7 @@ toml==0.10.2
 tomli==2.0.1
 traitlets==5.2.1.post0
 typing_extensions==4.2.0
+typer==0.4.2
 urllib3==1.26.9
 uvicorn==0.17.6
 uvloop==0.16.0
